improve: replace identity groups endpoint
